--- a/index.html
+++ b/index.html
@@ -9,14 +9,39 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
+
+
+
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+
 </head>
 
 <body>
 
-  <header id="override">
-  </header>
-
   <main>
+    <div class="section-1">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="logo">
+              <img src="assets/logo.png" alt="Just Places">
+              <h3>Building smart, sustainable tiny homes</h3>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="video">
+              <video controls src="assets/Just_Places_Intro_201214.mp4" poster="assets/video-poster.jpg"
+                alt="Just Places intro video">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-7">
+
+    </div>
   </main>
 
   <footer>
