Split into two rows

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
               <h3>Building smart, sustainable tiny homes</h3>
             </div>
           </div>
+        </div>
+        <div class="row">
           <div class="col-md-12">
             <div class="video">
               <video controls src="assets/Just_Places_Intro_201214.mp4" poster="assets/video-poster.jpg"
