Add unformatted html text for section 2&3

--- a/index.html
+++ b/index.html
@@ -41,9 +41,62 @@
         </div>
       </div>
     </div>
-    <div class="col-md-7">
 
+    <div class="section-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="h3">Why do We Need Just Places?</div>
+            <ul>
+              <li>There are more than 2000 unhoused people in Santa Cruz County</li>
+              <li>Conventional construction is a major contributor to environmental destruction</li>
+              <li>A system-level approach creates a positive outcome for all</li>
+              <li>Businesses, homeowners, and everyone else benifit from all people being housed</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="section-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="h3">Who Needs Housing?</div>
+            <ul>
+              <li>Most unhoused individuals were living in santa cruz before experiencing homelessness</li>
+              <li>Many are employed and/or attend school </li>
+              <li>31% of people experiencing homelessness are employed</li>
+              <li>Some are people who lost their homes in the CZU fires</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--
+
+    <div class="section-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="h3">About</div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section-3">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="h3">Latest</div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    -->
   </main>
 
   <footer>
