--- a/index.html
+++ b/index.html
@@ -42,41 +42,53 @@
       </div>
     </div>
 
-    <div class="section-2 bg-image">
-      <div class="overlay">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="h3">Why do We Need Just Places?</div>
-              <ul>
-                <li>There are more than 2000 unhoused people in Santa Cruz County</li>
-                <li>Conventional construction is a major contributor to environmental destruction</li>
-                <li>A system-level approach creates a positive outcome for all</li>
-                <li>Businesses, homeowners, and everyone else benifit from all people being housed</li>
-              </ul>
+    <div class="section-2 ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="bg-image">
+              <div class="overlay p-4">
+
+                <h2>Why do we need Just Places?</h2>
+                <ul>
+                  <li>There are more than 2000 unhoused people in Santa Cruz County</li>
+                  <li>Conventional construction is a major contributor to environmental destruction</li>
+                  <!-- <li>A system-level approach creates a positive outcome for all</li> -->
+                  <li>Businesses, homeowners, and everyone else benefit from all people being housed</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="section-3 bg-image">
-      <div class="overlay">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="h3">Who Needs Housing?</div>
-              <ul>
-                <li>Most unhoused individuals were living in santa cruz before experiencing homelessness</li>
-                <li>Many are employed and/or attend school </li>
-                <li>31% of people experiencing homelessness are employed</li>
-                <li>Some are people who lost their homes in the CZU fires</li>
-              </ul>
+    <div class="p-4"></div>
+
+    <div class="section-3 ">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="bg-image">
+              <div class="overlay p-4">
+
+                <h2>Who needs housing?</h2>
+                <ul>
+                  <li>Most unhoused individuals were living in santa cruz before experiencing homelessness</li>
+                  <li>Many are employed and/or attend school </li>
+                  <li>31% of people experiencing homelessness are employed</li>
+                  <li>Some are people who lost their homes in the CZU fires</li>
+                </ul>
+              </div>
             </div>
           </div>
+
         </div>
       </div>
     </div>
+
+    <div class="p-4"></div>
+
     <!--
 
     <div class="section-3">
