--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
           </div>
         </div>
       </div>
-      <!--
+    </div>
+
+    <!--
 
     <div class="section-3">
       <div class="container">
